# AI-fireworks-simulation-platform

./: .gitignore  AGENTS.md  PYROMIND_AGENT_BUILD_SPEC.md  README.md  pyromind.sqlite  requirements.txt
.github/workflows/: ci.yml
backend/: .env.example  main.py  pyproject.toml
backend/core/: cue_generator.py  llm_engine.py
backend/pyromind/: __init__.py  config.py  llm.py
backend/pyromind/agents/: __init__.py  audio_analyst.py  base.py  effect_librarian.py  show_director.py  stubs.py
backend/pyromind/api/: __init__.py  deps.py  effects.py  main.py  projects.py  shows.py  ws.py
backend/pyromind/audio/: embeddings.py  features.py  loader.py  sections.py  separation.py
backend/pyromind/catalog/: db.py  embedder.py  repositories.py  seed.py  seeder.py  vectors.py
backend/pyromind/catalog/migrations/: 001_baseline.sql  002_drop_legacy_checkpoints_for_langgraph.sql  003_effects_vec0.sql
backend/pyromind/graph/: __init__.py  build.py  checkpoint_serde.py  checkpoints.py  runtime.py  state.py
backend/pyromind/models/: __init__.py  audio.py  candidates.py  effect.py  events.py  plan.py  project.py  show.py
backend/pyromind/prompts/: loader.py  show_director.md  show_director_examples.json
backend/tests/: conftest.py  graph_test_utils.py  test_checkpoint_interrupt.py  test_db.py  test_effect_librarian.py  test_effects_api.py  test_graph_runner.py  test_llm_factory.py  test_projects_api.py  test_provenance.py  test_show_director.py  test_shows_upload.py  test_vec_search.py  test_ws.py
backend/tests/audio/: conftest.py  test_audio_analyst.py  test_embeddings.py  test_features.py  test_loader.py  test_sections.py  test_separation.py
data/: seed_catalog.sqlite
data/effects/: golden_brocade_crown.json
docs/: architecture.md  legacy_inventory.md
docs/decisions/: ADR-000-template.md  ADR-002-windows-msvc-linker.md
frontend/: .env.example  App.jsx  package.json  pnpm-lock.yaml
frontend/components/: FireworkForm.jsx
frontend/src/: App.css  App.tsx  main.tsx  vite-env.d.ts
frontend/src-tauri/: tauri.conf.json
frontend/src-tauri/src/: commands.rs  lib.rs  sidecar.rs
frontend/src/lib/: api.ts  isTauri.ts  ws.ts
scripts/: analyze_audio.py  gen_types.py
src-tauri/: Cargo.toml
src-tauri/src/: lib.rs  main.rs  sidecar.rs
(+17 files in other folders)
