[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.13.0",
    "aiosqlite>=0.22.1",
    "cython>=3.2.4",
    "demucs>=4.0.1",
    "fastapi>=0.136.0",
    "ffmpeg-python>=0.2.0",
    "langchain-anthropic>=1.4.1",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.2.0",
    "langgraph>=1.1.9",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "librosa>=0.11.0",
    "madmom",
    "mido>=1.2.10",
    "numpy>=2.4.3",
    "ollama>=0.6.1",
    "python-multipart>=0.0.20",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "setuptools>=70.2.0",
    "soundfile>=0.13.1",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "torchvision>=0.20.1",
    "transformers>=5.6.1",
    "uvicorn>=0.46.0",
    "wheel>=0.47.0",
    "sqlite-vec>=0.1.9",
    "sentence-transformers>=5.4.1",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu121"

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

# PyPI madmom==0.16.1 is broken on Python 3.10+ (collections.MutableSequence).
# Mainline CPJKU/madmom has the fix + NumPy 2 compatibility (#540).
[tool.uv.sources]
madmom = { git = "https://github.com/CPJKU/madmom.git", rev = "27f032e8947204902c675e5e341a3faf5dc86dae" }
